[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "journal-sentiment"
version = "0.1.0"
description = "A command-line journal sentiment analyzer using RoBERTa"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Shiva Goli", email = "shivag2@illinois.edu" }
]

dependencies = [
  "transformers>=4.30",
  "torch>=2.0",
  "pytest>=7.0.0",
  "click>=8.0",
  "pytest-mock>=3.10.0"
]

[project.scripts]
journal = "journal.__main__:main"

[tool.setuptools]
packages = ["journal"]
